tests/snapshots/lexer__numbers__errors__exponent_alpha.snap
---
source: tests/lexer.rs
expression: "lex(\"1e+abc\")"
---
Err(
    LexError {
        message: "invalid exponent: `1e+a`",
        span: Span {
            start: 0,
            end: 4,
        },
    },
)
