tests/snapshots/lexer__numbers__errors__trailing_alpha.snap
---
source: tests/lexer.rs
expression: "lex(\"42abc\")"
---
Err(
    LexError {
        message: "invalid number literal: `42abc`",
        span: Span {
            start: 0,
            end: 5,
        },
    },
)
